Article+Cards+ honoluluBeta

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <div class="container-prin">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-        <img class="img-logo" src="images/codoacodo.png" alt="logotipoCodoaCodo">
+        <!-- <img class="img-logo" src="images/codoacodo.png" alt="logotipoCodoaCodo"> -->
           <a class="navbar-brand" href="#">Conf Bs As</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,29 +21,30 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link disabled">La conferencia</a>
+                  <a class="nav-link" href="#">La conferencia</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled">Los oradores</a>
+                  <a class="nav-link" href="#">Los oradores</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled">El lugar y la fecha</a>
+                  <a class="nav-link" href="#">El lugar y la fecha</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled">Conviértete en orador</a>
+                  <a class="nav-link" href="#">Conviértete en orador</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled">Comprar tickets</a>
+                  <a class="nav-link" href="#">Comprar tickets</a>
                 </li>
               </ul>
           </div>
         </div>
-    </nav>
+      </nav>
 
-    <div class="container-prin">
-        <img class="img-container" src="/images/hawaii222.jpg">
-        <h2>Conf Bs As</h2>
-        <p>Bs As llega por primera vez a Argentina. Un evento para compartir<br> con nuestra comunidad el conocimiento y experiencia de los expertos que<br> están creando el futuro de Internet. Ven a conocer a miembros del<br> evento, a otros estudiantes de Codo a Codo y los oradores de primer<br> niverl que tenemos para ti. te esperamos!</p>
+      <img src="/images/hawaii222.jpg">
+      <h2>Conf Bs As</h2>
+      <p>Bs As llega por primera vez a Argentina. Un evento para compartir con<br> nuestra comunidad el conocimiento y experiencia de los expertos que<br> están creando el futuro de Internet. Ven a conocer a miembros del<br> evento, a otros estudiantes de Codo a Codo y los oradores de primer<br> niverl que tenemos para ti. te esperamos!</p>
+      <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
+      <button class="btn btn-primary" type="submit">Comprar tickets</button>
     </div>
 
     <article class="cards">
@@ -91,12 +93,12 @@
           
     </article>
 
-    <article>
-        <img src="images/honolulu.jpg">
-        <div class="container-article">
-            <h3></h3>
-            <p></p>
-        </div>
+    <article class="container-article">
+        <img class="honolulu" src="images/honolulu.jpg">
+        <article class="container-article1">
+          <h3>Bs As - Octubre</h3>
+          <p>Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad- condado condolufafa que cubre toda la ciudad (aproximadamente 600 km<sup>2</sup>. de superficie).</p>
+        </article>
     </article>
 </body>
 </html>
