--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <article class="cards">
         <div class="card-phrases">
           <p>CONOCE A LOS</p>
-          <p>ORADORES</p>
+          <p class="oradores">ORADORES</p>
         </div>
 
         <div class="container-cards">
@@ -98,7 +98,31 @@
         <article class="container-article1">
           <h3>Bs As - Octubre</h3>
           <p>Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad- condado condolufafa que cubre toda la ciudad (aproximadamente 600 km<sup>2</sup>. de superficie).</p>
+          <button type="button" class="btn btn-outline-light btn1">Conocé más</button>
         </article>
     </article>
+
+    <article class="conv-orador">
+      <div class="card-phrases">
+        <p>CONVIÉRTETE EN UN</p>
+        <p class="oradores">ORADOR</p>
+        <P>Anótate como orador para dar una charla ignite. Cuéntanos de que quieres hablar!</P>
+      </div>
+
+      <div>
+        <div class="mb-3">
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Apellido">
+        </div>
+        <div class="mb-3">
+          <textarea class="form-control form-textarea" id="exampleFormControlTextarea1" rows="3" placeholder="Sobre que quieres hablar?"></textarea>
+        </div>
+        <p>Recuerda incluir un titulo para tu charla</p>
+        
+      </div>
+    </article>
+
 </body>
 </html>
+
+<!-- btn-article -->
